# cryptid

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: commit.rs  common.rs  curve.rs  elgamal.rs  lib.rs  main.rs  scalar.rs  shuffle.rs  sign.rs  threshold.rs  util.rs  zkp.rs
src/threshold/: complete.rs  init.rs  mod.rs  sharing.rs  verifying.rs
