[package]
name = "cryptid"
version = "0.9.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"
description = "An implementation of the threshold ElGamal cryptosystem with zero-knowledge proofs, using Ristretto255 as the group."
license = "Apache-2.0"
repository = "https://github.com/noneuclideangirl/cryptid"

[dependencies]
rand_core = { version = "0.6", default_features = false }
rust-elgamal = { git = "https://github.com/eleanor-em/rust-elgamal.git", branch = "ng", version = "0.3", features = ["enable-serde"] }
serde = { version = "1", default_features = false, features = ["derive"] }
sha2 = "0.9"
zkp = "0.8"
bincode = "1"

[dev-dependencies]
rand = { version = "0.8" }
