[package]
name = "cryptid"
version = "0.9.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"
description = "An implementation of the threshold ElGamal cryptosystem with zero-knowledge proofs, using Ristretto255 as the group."
license = "Apache-2.0"
repository = "https://github.com/noneuclideangirl/cryptid"

[dependencies]
rand_core = { version = "0.6", default_features = false }
rust-elgamal = { version = "0.4", features = ["enable-serde"] }
serde = { version = "1", default_features = false, features = ["derive"] }
sha2 = "0.9"
zkp = { git = "https://github.com/eleanor-em/zkp", branch = "main" }
bincode = "1"

[dev-dependencies]
rand = { version = "0.8" }
