[package]
name = "cryptid"
version = "0.9.0"
authors = ["Eleanor McMurtry <elmcmurtry1@gmail.com>"]
edition = "2018"
description = "An implementation of the threshold ElGamal cryptosystem with zero-knowledge proofs, using Curve25519 as the group."
license = "MIT"
repository = "https://github.com/noneuclideangirl/cryptid"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
num-bigint = { version = "0.4", features = ["rand", "serde"] }
ring = "0.16"
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4", features = [
    "serde",
    "std"
] }
num-traits = "0.2"
base64 = "0.13"
rand_chacha = "0.3"
rand = "0.8"
rayon = "1.3"
